name:                free-monad-logger
version:             0.1.0.0
synopsis:            Example of wrapping a Free Monad DSL in MonadLogger.
description:         Please see README.md
homepage:            http://github.com/cdepillabout/free-monad-logger
license:             BSD3
license-file:        LICENSE
author:              Dennis Gosnell
maintainer:          example@example.com
copyright:           2016 Dennis Gosnell
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , fast-logger
                     , free
                     , monad-logger
                     , text
  default-language:    Haskell2010

executable whatwhat-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , whatwhat
  default-language:    Haskell2010

test-suite whatwhat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , whatwhat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cdepillabout/free-monad-logger
